1. Улучшения Collection API [#295842]