@@ -2,6 +2,7 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.Matchers.is;
@@ -34,20 +35,20 @@ public class DepartmentsTest {
 
     @Test
     public void whenAscendingOrder() {
-        List<String> input = Arrays.asList("K2", "K1/SK1", "K2/SK1", "K1/SK1/SSK1",
-                "K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK1/SSK2", "K1", "K1/SK2");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2",
-                "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2");
+        List<String> input = new ArrayList<>(List.of("K2", "K1/SK1", "K2/SK1", "K1/SK1/SSK1",
+                "K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK1/SSK2", "K1", "K1/SK2"));
+        List<String> expect = new ArrayList<>(List.of("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2",
+                "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2"));
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenDescendingOrder() {
-        List<String> input = Arrays.asList("K2", "K1/SK1", "K2/SK1", "K1/SK1/SSK1",
-                "K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK1/SSK2", "K1", "K1/SK2");
-        List<String> expect = Arrays.asList("K2", "K2/SK1", "K2/SK1/SSK1",
-                "K2/SK1/SSK2", "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
+        List<String> input = new ArrayList<>(List.of("K2", "K1/SK1", "K2/SK1", "K1/SK1/SSK1",
+                "K2/SK1/SSK1", "K2/SK1/SSK2", "K1/SK1/SSK2", "K1", "K1/SK2"));
+        List<String> expect = new ArrayList<>(List.of("K2", "K2/SK1", "K2/SK1/SSK1",
+                "K2/SK1/SSK2", "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2"));
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
