@@ -2,10 +2,7 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.lessThan;
@@ -15,11 +12,11 @@ import static org.junit.Assert.assertThat;
 public class JobTest  {
     @Test
     public void whenComparatorByNameDescendingOrder() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("Impl task", 0),
                 new Job("Fix bug", 1),
                 new Job("Testing", 2)
-        );
+        ));
         Collections.sort(jobs, new JobDescByName());
         assertThat(jobs.toString(), is("[Job{Testing, 2}, "
                 + "Job{Impl task, 0}, "
@@ -28,11 +25,11 @@ public class JobTest  {
 
     @Test
     public void whenComparatorByNameAscendingOrder() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("Impl task", 0),
                 new Job("Fix bug", 1),
                 new Job("Testing", 2)
-        );
+        ));
         Collections.sort(jobs, new JobAscByName());
         assertThat(jobs.toString(), is("[Job{Fix bug, 1}, "
                 + "Job{Impl task, 0}, "
@@ -41,11 +38,11 @@ public class JobTest  {
 
     @Test
     public void whenComparatorByPriorityDescendingOrder() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("Impl task", 5),
                 new Job("Fix bug", 1),
                 new Job("Testing", 2)
-        );
+        ));
         Collections.sort(jobs, new JobDescByPriority());
         assertThat(jobs.toString(), is("[Job{Impl task, 5}, "
                 + "Job{Testing, 2}, "
@@ -54,11 +51,11 @@ public class JobTest  {
 
     @Test
     public void whenComparatorByPriorityAscendingOrder() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("Impl task", 5),
                 new Job("Fix bug", 1),
                 new Job("Testing", 2)
-        );
+        ));
         Collections.sort(jobs, new JobAscByPriority());
         assertThat(jobs.toString(), is("[Job{Fix bug, 1}, "
                 + "Job{Testing, 2}, "
